--- a/css/button.css
+++ b/css/button.css
@@ -5,6 +5,13 @@
     border: none;
 }
 
+.buttonDoneCheck {
+    background-image: url(https://i.postimg.cc/kgSXrYyk/checkedR.png);
+    width: 30px;
+    height: 30px;
+    border: none; 
+}
+
 .buttonRemove {
     background-image: url(https://i.postimg.cc/Pr9rRn1W/binR.png);
     width: 30px;
