--- a/css/list.css
+++ b/css/list.css
@@ -1,4 +1,8 @@
-.listItem {
+.list__item {
     list-style-type: none;
     margin-top: 20px;
+}
+
+.list__item--done {
+    text-decoration: line-through;
 }
