--- a/css/section.css
+++ b/css/section.css
@@ -6,4 +6,83 @@ margin: 0;
 
 .section__container {
     padding: 20px;
+    border: 1px #f0f0f0 solid;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 5px 0px 
+}
+
+.section__container--flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.section__container--topGap {
+    margin-top: 10px;
+}
+
+.section__newTaskInput {
+    flex-grow: 1;
+    height: 38.4px;
+    border: 1px #e0e0e0 solid;
+    padding: 10px;
+}
+
+.section__addNewTaskButton {
+    border: none;
+    background-color: hsl(180, 100%, 25%);
+    font-family: "Montserrat", sans-serif;
+    color: #ffffff;
+    padding: 10px;
+    margin-left: 20px;
+}
+
+.section__addTaskButton:active {
+    background-color: hsl(180, 100%, 28%);
+}
+
+@media (max-width: 767px) {
+    .section__addTaskButton {
+        flex-basis: 100%;
+        margin-top: 10px;
+        margin-left: 0;
+    }
+}
+
+.section__tasksList {
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+}
+
+.section__tasksListItem {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    border-bottom: 2px #f0f0f0 solid;
+    margin-top: 20px;
+    padding: 0 10px 10px;
+}
+
+.section__tasksListItem:first-child {
+    margin-top: 0;
+}
+
+.section__listItemText {
+    padding: 5px 10px;
+}
+
+.section__buttons {
+    width: 28px;
+    height: 28px;
+    color: #ffffff;
+    border: none;
+    background-color: #008000;
+}
+
+.section__buttons--delete {
+    background-color: #ff0000;
+}
+
+.section__textDone {
+    text-decoration: line-through;
 }
